--- a/site-plan.html
+++ b/site-plan.html
@@ -5,14 +5,14 @@
 <head>
   <meta charset="utf-8" />
   <title>Site Plan</title>
-  <link type="text/css" rel="stylesheet" href="styles/site-plan.css" />
+  <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
 </head>
 
 <body>
   <header>
-    <h1>[Dry Oar] Site Plan</h1>
-    <h2>[Carson Bradford]</h2>
-    <h2>WDD 130-[06]</h2>
+    <h1>[Site name] Site Plan</h1>
+    <h2>[FirstName LastName]</h2>
+    <h2>WDD 130-[section]</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -20,11 +20,11 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[The purpose of the Dry Oar website serves two purposes. The first is to allow users to book rafting guides and certification courses, transportation and more. The second is to communicate our values of safety, professionalism, and adventure to entice more people to choose our services over competetors.]</p>
+    <p>[Your purpose here]</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[The target audience of the Dry Oar website are adventerous families. They want a family or group activity that provides them with thrill,adventure and an outdoor experience without needing extensive technical or phisical training.]</p>
+    <p>[Your audience here]</p>
     <!-- change this -->
 
     <hr />
@@ -42,8 +42,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/05668d-028090-00a896-02c39a-ffffff"
-      target="_blank">https://coolors.co/05668d-028090-00a896-02c39a-ffffff</a>
+    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
+      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
 
     <table class="colors">
       <tr>
@@ -54,10 +54,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#05668d]</td>
-        <td class="secondary">[#028090]</td>
-        <td class="accent1">[#02c39a]</td>
-        <td class="accent2">[#ffffff]</td>
+        <td class="primary">[#396E94]</td>
+        <td class="secondary">[#E7C24F]</td>
+        <td class="accent1">[#A43312]</td>
+        <td class="accent2"></td>
       </tr>
     </table>
 
@@ -67,11 +67,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Permanent Marker]
+      Heading Font: [Font Name here]
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Abel]
+      Paragraph Font: [Font Name here]
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
