--- a/wwr/site-plan.html
+++ b/wwr/site-plan.html
@@ -120,6 +120,8 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
+    <img id="river-page-wireframe" src="images\WWR Wireframe 2.png" alt="Page 2 Wireframe">
+
     <h3>[Page 2]</h3>
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
