updated links for personal page and site plan

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan.html">White Water Rafting Siteplan</a>
         <a href="pos-activity/positioning.html">Positioning Activity</a>
-        <a href="#">Personal Website</a>
-        <a href="#">Personal Siteplan</a>
+        <a href="climb-on/index.html">Personal Website</a>
+        <a href="climb-on/site-plan.html">Personal Siteplan</a>
     </nav>
 </body>
 </html>
