updated rivers page

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -16,7 +16,7 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
+            <a href="rivers.html">Rivers</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
@@ -35,17 +35,17 @@
     </div>
     <main class="home-grid">
         <section class="rivers-card">
-            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+            <img class="card-img" src="images/salmonRiver.jpg" alt="Salmon River">
             <img class="icon" src="images/river_icon.png" alt="river icon">
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+            <img class="card-img" src="images/desolationCanyon.jpg" alt="Desolation Canyon">
             <img class="icon" src="images/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
         <section class="rapids-card">
-            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+            <img class="card-img" src="images/grandCanyon.jpg" alt="Grand Canyon">
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
