added personal site sub pages

--- a/climb-on/index.html
+++ b/climb-on/index.html
@@ -13,9 +13,9 @@
 		</div>
 		<nav>
 			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Services</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="craig.html">Craig Climbing</a></li>
+				<li><a href="multipitch.html">Multipitch</a></li>
 				<li><a href="#">Gallery</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
@@ -26,21 +26,24 @@
 		<section class="hero">
 			<h1>Explore New Heights</h1>
 			<p>Join ClimbOn and take your climbing skills to the next level.</p>
-			<a href="#" class="btn">Learn More</a>
+			<img id="hero-img" src="images/elephantRock.jfif" alt="Backround Image">
+            <a href="#" class="btn">Learn More</a>
 		</section>
 		
 		<section class="services">
 			<h2>Our Services</h2>
 			<div class="services-container">
 				<div class="service">
-					<img src="service1.jpg" alt="Service 1">
-					<h3>Indoor Climbing</h3>
-					<p>ClimbOn has state-of-the-art indoor climbing facilities with a variety of routes and challenges for all levels.</p>
+					<img src="images/rocks.jfif" alt="Service 1">
+					<h3>Guided Craig Climbing</h3>
+					<p>Experience the thrill of outdoor climbing with our experienced guides who will take you to the best climbing spots in the region.
+                        (A variety of routes and challenges for all levels.)</p>
 				</div>
 				<div class="service">
-					<img src="service2.jpg" alt="Service 2">
-					<h3>Outdoor Climbing</h3>
-					<p>Experience the thrill of outdoor climbing with our experienced guides who will take you to the best climbing spots in the region.</p>
+					<img src="images/fingerRock.jfif" alt="Service 2">
+					<h3>Guided Multipitch Climbing</h3>
+					<p>Experience the thrill and exposure of multipitch climbing with our experienced guides who will take you new hights. 
+                        (For advanced climber and thrill seekeres)</p>
 				</div>
 			</div>
 		</section>
@@ -49,16 +52,6 @@
 			<h2>About Us</h2>
 			<p>ClimbOn is a premier climbing club with a mission to promote the sport of climbing and create a community of passionate climbers. We offer a range of services to cater to climbers of all levels, from beginner to advanced.</p>
 			<a href="#" class="btn">Join Us</a>
-		</section>
-		
-		<section class="gallery">
-			<h2>Gallery</h2>
-			<div class="gallery-container">
-				<img src="gallery1.jpg" alt="Gallery Image 1">
-				<img src="gallery2.jpg" alt="Gallery Image 2">
-				<img src="gallery3.jpg" alt="Gallery Image 3">
-				<img src="gallery4.jpg" alt="Gallery Image 4">
-			</div>
 		</section>
 	</main>
 	
