deleted text shadows

--- a/climb-on/craig.html
+++ b/climb-on/craig.html
@@ -30,7 +30,7 @@
         </section>
         
         <section class="services">
-            <h2>Our Craig Climbing Services</h2>
+            <h2>Guided Craig Climbing</h2>
             <div class="services-container">
                 <div class="service">
                     <img src="images/craig.jfif" alt="Service 1">
