pushing stie plan

--- a/climb-on/site-plan.html
+++ b/climb-on/site-plan.html
@@ -124,30 +124,42 @@
         Content
       </h2>
       <h3>Home page</h3>
-      <p>
-        [Written copy for the home page here]
-      </p>
+      <p1>Explore New Heights</p1>
+			<p>Join ClimbOn and take your climbing skills to the next level.</p>
+      <p>Our Services</p>
+      <p>Guided Craig Climbing</p>
+      <p>Guided Multipitch Climbin</p>
+      <p>About Us</p>
+      <p></p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/elephantRock.jfif" alt="image for homepage">
+        <img src="images/fingerRock.jfif" alt="image for homepage">
 
       </ul>
       <h3>[Page 2]</h3>
-      <p>
-        [Written copy for the Page 2 here]
-      </p>
+      <p>Guided Craig Climbing</p>
+      <p>Experience the thrill of outdoor climbing with our experienced guides who will take you to the best climbing spots in the region.</p>
+      <p>A Variety of Routes and Challenges</p>
+      <p>We offer a variety of routes and challenges for all levels, from beginner to advanced, so you can push your limits and enjoy the best climbing experience possible</p>
+      <p>Experienced Guides</p>
+      <p>Our guides are experienced climbers who know the area like the back of their hands. They will take you to the best spots and help you improve your skills along the way</p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/craig.jfif" alt="image for page">
+        <img src="images/craig2.jfif" alt="image for page">
 
       </ul>
       <h3>[Page 3]</h3>
-      <p>
-        [Written copy for the Page 3 here]
-      </p>
+      <p>Guided Multipitch Climbing</p>
+      <p>Reach New Heights with Guided Multipitch Climbing.</p>
+      <p>A Variety of Routes and Challenges</p>
+      <p>Join ClimbOn and experience the thrill and exposure of climbing to new heights with our experienced guides.</p>
+      <p>Experienced Guides</p>
+      <p>Our guides are experienced climbers who know the area like the back of their hands. They will take you to the best spots and help you improve your skills along the way</p>
+      <p>They will take you to the best spots and help you improve your skills along the way.</p>
+      
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/multipitch1.jfif" alt="image for page3">
+        <img src="images/multipitch2.jfif" alt="image for page3">
 
       </ul>
       <hr>
