--- a/climb-on/craig.html
+++ b/climb-on/craig.html
@@ -11,6 +11,7 @@
 				<img src="images/climbOnLogo.jpg" alt="ClimbOn Logo">
 			</a>
 		</div>
+        <h1>Climb On</h1>
 		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
